tests/ui/rfcs/rfc-0000-never_patterns/bindings.stderr
error: never patterns cannot contain variable bindings
  --> $DIR/bindings.rs:16:15
   |
LL |         Err(&(_a, _b, !)),
   |               ^^ help: use a wildcard `_` instead

error: never patterns cannot contain variable bindings
  --> $DIR/bindings.rs:16:19
   |
LL |         Err(&(_a, _b, !)),
   |                   ^^ help: use a wildcard `_` instead

error: never patterns cannot contain variable bindings
  --> $DIR/bindings.rs:21:25
   |
LL |         Ok(_ok) | Err(&(_a, _b, !)) => {}
   |                         ^^ help: use a wildcard `_` instead

error: never patterns cannot contain variable bindings
  --> $DIR/bindings.rs:21:29
   |
LL |         Ok(_ok) | Err(&(_a, _b, !)) => {}
   |                             ^^ help: use a wildcard `_` instead

error: aborting due to 4 previous errors

